# JUSUPLUSPLUS

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  requirements.txt  tmp0714o530.jusu  tmp_jit_bench.jusu  tmpui1i7mm8.jusu
.github/: PULL_REQUEST_TEMPLATE.md
archive/: docs_unreal_plugin.md
compiler/: jusu.py  lexer.py  parser.py
course/: README.md  __init__.py  course.yaml
docs/: LSP.md  packages.md  publishing.md  sandbox.md  stdlib.md  vm_design.md  wasm.md
examples/: datascience.jusu  demo_plugin.py  factorial.jusu  hello.jusu
projects/: __init__.py
runtime/: _sandbox_child.py  arpah.py  bytecode_compiler.py  compiler.py  datascience.py  ffi.py  interpreter.py  jit.py  js.py  pkgmgr.py  register_compiler.py  register_vm.py  repl.py  sandbox.py  stdlib.py  vm.py  wasm.py  web.py
scripts/: check_imports.py
tests/: test_builtins.py  test_bytecode_function.py  test_course_exercises.py  test_course_notebooks.py  test_datascience.py  test_datascience_pandas.py  test_errors_and_locations.py  test_examples.py  test_ffi.py  test_function.py  test_grade_submission.py  test_if.py  test_init_package.py  test_jit.py  test_jit_float.py  test_jit_multiarg.py  test_jsbridge.py  test_name_lookup.py  test_pkgmgr.py  test_register_vm.py  test_render_notebooks.py  test_sandbox.py  test_stdlib.py  test_strings.py  test_type_errors.py  test_vm_skeleton.py  test_wasm.py  test_web.py
tools/: benchmarks.py  check_generated.py  check_jit_module.py  check_llvmlite.py  debug_jit.py  init_jusu_package.py  lsp_server.py  (+4 more)
(+78 files in other folders)
