[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jusu-language"
version = "0.1.1"
description = "Jusu++ — a small multi-backend scripting language prototype"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "" }]
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
# Optional data science helpers
datatools = ["numpy>=1.23", "pandas>=1.5"]
# Optional wasm runtime
wasm = ["wasmtime>=11.0.0"]
# Development extras for contributors and CI
dev = ["pytest", "pytest-cov", "pre-commit", "flake8", "llvmlite"]

[tool.black]
line-length = 88
